fix calendar layout on small screens

--- a/client/src/app/calendar/calendar-item/calendar-item.component.scss
+++ b/client/src/app/calendar/calendar-item/calendar-item.component.scss
@@ -1,5 +1,5 @@
 mat-panel-title {
-    width: 100px;
+    width: 200px;
 }
 mat-panel-description {
     flex-basis: 100%;
